--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,5 @@ ProvaSiteware/ProvaSiteware.MVC/obj/Debug/ProvaSiteware.MVC.pdb
 ProvaSiteware/ProvaSiteware.MVC/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 ProvaSiteware/ProvaSiteware.MVC/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 ProvaSiteware/ProvaSiteware.MVC/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+ProvaSiteware/ProvaSiteware.MVC/App_Data/ProvaSiteware.mdf
+ProvaSiteware/ProvaSiteware.MVC/App_Data/ProvaSiteware_log.ldf
