--- a/ProvaSiteware/ProvaSiteware.Infra.Data/ProvaSiteware.Infra.Data.csproj
+++ b/ProvaSiteware/ProvaSiteware.Infra.Data/ProvaSiteware.Infra.Data.csproj
@@ -47,10 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\ProvaSitewareContext.cs" />
+    <Compile Include="EntityConfig\ProdutoConfiguration.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="EntityConfig\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
