--- a/ProvaSiteware/ProvaSiteware.MVC/Web.config
+++ b/ProvaSiteware/ProvaSiteware.MVC/Web.config
@@ -6,10 +6,10 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ProvaSitewareDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ProvaSiteware.MVC-20150418000311.mdf" />
+    <add name="ProvaSitewareDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DANIEL-DESKTOP;Initial Catalog=ProvaSiteware;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\ProvaSiteware.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
