--- a/ProvaSiteware/ProvaSiteware.Infra.Data/ProvaSiteware.Infra.Data.csproj
+++ b/ProvaSiteware/ProvaSiteware.Infra.Data/ProvaSiteware.Infra.Data.csproj
@@ -50,10 +50,10 @@
     <Compile Include="EntityConfig\ProdutoConfiguration.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ProdutoRepository.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
