--- a/ProvaSiteware/ProvaSiteware.MVC/ProvaSiteware.MVC.csproj
+++ b/ProvaSiteware/ProvaSiteware.MVC/ProvaSiteware.MVC.csproj
@@ -223,6 +223,11 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Produto\Index.cshtml" />
+    <Content Include="Views\Produto\Details.cshtml" />
+    <Content Include="Views\Produto\Create.cshtml" />
+    <Content Include="Views\Produto\Edit.cshtml" />
+    <Content Include="Views\Produto\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -231,6 +236,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ProvaSiteware.Application\ProvaSiteware.Application.csproj">
+      <Project>{3267c211-17ee-4db3-a882-ccff775ae878}</Project>
+      <Name>ProvaSiteware.Application</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProvaSiteware.Domain\ProvaSiteware.Domain.csproj">
       <Project>{d9219f5c-06eb-41b8-964f-387353362d29}</Project>
       <Name>ProvaSiteware.Domain</Name>
