Instalei o Ninject no projeto de MVC para fazer a injeção de dependência e implementei o grosso das funcionalidades do Carrinho

--- a/.gitignore
+++ b/.gitignore
@@ -313,3 +313,69 @@ ProvaSiteware/ProvaSiteware.Application/bin/Debug/ProvaSiteware.Domain.pdb
 ProvaSiteware/ProvaSiteware.MVC/bin/ProvaSiteware.Application.dll
 ProvaSiteware/ProvaSiteware.MVC/bin/ProvaSiteware.Application.pdb
 ProvaSiteware/ProvaSiteware.MVC/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/net35/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/net35/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/net40/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/net40/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/net45-full/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/net45-full/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl2/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl2/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl3/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl3/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl3-wp/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl3-wp/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl4/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl4/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl4-windowsphone71/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl4-windowsphone71/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl5/Ninject.dll
+ProvaSiteware/packages/Ninject.3.2.2.0/lib/sl5/Ninject.xml
+ProvaSiteware/packages/Ninject.3.2.2.0/Ninject.3.2.2.0.nupkg
+ProvaSiteware/packages/Ninject.MVC4.3.2.1.0/lib/net40-full/Ninject.Web.Mvc.dll
+ProvaSiteware/packages/Ninject.MVC4.3.2.1.0/lib/net40-full/Ninject.Web.Mvc.xml
+ProvaSiteware/packages/Ninject.MVC4.3.2.1.0/lib/net45-full/Ninject.Web.Mvc.dll
+ProvaSiteware/packages/Ninject.MVC4.3.2.1.0/lib/net45-full/Ninject.Web.Mvc.xml
+ProvaSiteware/packages/Ninject.MVC4.3.2.1.0/Ninject.MVC4.3.2.1.0.nupkg
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/lib/net35-full/Ninject.Web.Common.dll
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/lib/net35-full/Ninject.Web.Common.xml
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/lib/net40-full/Ninject.Web.Common.dll
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/lib/net40-full/Ninject.Web.Common.xml
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/lib/net45-full/Ninject.Web.Common.dll
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/lib/net45-full/Ninject.Web.Common.xml
+ProvaSiteware/packages/Ninject.Web.Common.3.2.3.0/Ninject.Web.Common.3.2.3.0.nupkg
+ProvaSiteware/packages/Ninject.Web.Common.WebHost.3.2.3.0/Content/App_Start/NinjectWebCommon.cs.pp
+ProvaSiteware/packages/Ninject.Web.Common.WebHost.3.2.3.0/Ninject.Web.Common.WebHost.3.2.3.0.nupkg
+ProvaSiteware/packages/WebActivatorEx.2.0.6/lib/net40/WebActivatorEx.dll
+ProvaSiteware/packages/WebActivatorEx.2.0.6/WebActivatorEx.2.0.6.nupkg
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/bin/Debug/ProvaSiteware.Infra.CrossCutting.IoC.dll
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/bin/Debug/ProvaSiteware.Infra.CrossCutting.IoC.pdb
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/ProvaSiteware.Infra.CrossCutting.IoC.csproj.FileListAbsolute.txt
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/ProvaSiteware.Infra.CrossCutting.IoC.dll
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/ProvaSiteware.Infra.CrossCutting.IoC.pdb
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+ProvaSiteware/ProvaSiteware.Infra.CrossCutting.IoC/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+ProvaSiteware/ProvaSiteware.Infra.IoC/bin/Debug/Ninject.dll
+ProvaSiteware/ProvaSiteware.Infra.IoC/bin/Debug/Ninject.xml
+ProvaSiteware/ProvaSiteware.Infra.IoC/bin/Debug/ProvaSiteware.Infra.IoC.dll
+ProvaSiteware/ProvaSiteware.Infra.IoC/bin/Debug/ProvaSiteware.Infra.IoC.pdb
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/ProvaSiteware.Infra.IoC.csproj.FileListAbsolute.txt
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/ProvaSiteware.Infra.IoC.dll
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/ProvaSiteware.Infra.IoC.pdb
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+ProvaSiteware/ProvaSiteware.Infra.IoC/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+ProvaSiteware/ProvaSiteware.MVC/bin/EntityFramework.SqlServer.dll
+ProvaSiteware/ProvaSiteware.MVC/bin/Ninject.dll
+ProvaSiteware/ProvaSiteware.MVC/bin/Ninject.Web.Common.dll
+ProvaSiteware/ProvaSiteware.MVC/bin/Ninject.Web.Common.xml
+ProvaSiteware/ProvaSiteware.MVC/bin/Ninject.Web.Mvc.dll
+ProvaSiteware/ProvaSiteware.MVC/bin/Ninject.Web.Mvc.xml
+ProvaSiteware/ProvaSiteware.MVC/bin/Ninject.xml
+ProvaSiteware/ProvaSiteware.MVC/bin/ProvaSiteware.Infra.Data.dll
+ProvaSiteware/ProvaSiteware.MVC/bin/ProvaSiteware.Infra.Data.pdb
+ProvaSiteware/ProvaSiteware.MVC/bin/WebActivatorEx.dll
+ProvaSiteware/ProvaSiteware.MVC/obj/Debug/DesignTimeResolveAssemblyReferences.cache
