--- a/ProvaSiteware/ProvaSiteware.MVC/Web.config
+++ b/ProvaSiteware/ProvaSiteware.MVC/Web.config
@@ -4,10 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
   <connectionStrings>
     <add name="ProvaSitewareDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DANIEL-DESKTOP;Initial Catalog=ProvaSiteware;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\ProvaSiteware.mdf" />
   </connectionStrings>
@@ -24,6 +20,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
+    <!--<customErrors mode="On" />-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -75,7 +72,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
@@ -83,11 +80,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="v11.0" />
-      </parameters>
-    </defaultConnectionFactory>
-  </entityFramework>
 </configuration>
