--- a/ProvaSiteware/ProvaSiteware.Domain/ProvaSiteware.Domain.csproj
+++ b/ProvaSiteware/ProvaSiteware.Domain/ProvaSiteware.Domain.csproj
@@ -33,12 +33,22 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Enumeradores.cs" />
+    <Compile Include="Common\PromocaoAttribute.cs" />
+    <Compile Include="Common\Helpers\EnumHelper.cs" />
+    <Compile Include="Entities\Carrinho.cs" />
+    <Compile Include="Entities\Promocao\PagueUmLeveDois.cs" />
+    <Compile Include="Entities\Promocao\TresPorDezReais.cs" />
+    <Compile Include="Entities\Promocao\Promocao.cs" />
+    <Compile Include="Entities\ItemCarrinho.cs" />
     <Compile Include="Entities\Produto.cs" />
     <Compile Include="Interfaces\Repositories\IProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Services\ICarrinhoService.cs" />
     <Compile Include="Interfaces\Services\IProdutoService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CarrinhoService.cs" />
     <Compile Include="Services\ProdutoService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
