Implementação do layout usando Bootstrap e correção de alguns bugs

--- a/ProvaSiteware/ProvaSiteware.MVC/Web.config
+++ b/ProvaSiteware/ProvaSiteware.MVC/Web.config
@@ -20,7 +20,8 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <!--<customErrors mode="On" />-->
+    <customErrors mode="On" />
+    <globalization culture="pt-BR" uiCulture="pt-BR" enableClientBasedCulture="true" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
