--- a/ProvaSiteware/ProvaSiteware.MVC/packages.config
+++ b/ProvaSiteware/ProvaSiteware.MVC/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
-  <package id="jQuery" version="1.7.1.1" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
-  <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="jQuery.Validation.Globalize" version="1.0.1" targetFramework="net45" />
+  <package id="jquery-globalize" version="0.1.3" targetFramework="net45" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net45" />
