--- a/ProvaSiteware/ProvaSiteware.MVC/Web.config
+++ b/ProvaSiteware/ProvaSiteware.MVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ProvaSitewareDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=DANIEL-DESKTOP;Initial Catalog=ProvaSiteware;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\ProvaSiteware.mdf" />
+    <add name="ProvaSitewareDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=Localhost;Initial Catalog=ProvaSiteware;Integrated Security=SSPI;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -14,13 +14,21 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <customErrors mode="On" />
+    <customErrors mode="Off" />
     <globalization culture="pt-BR" uiCulture="pt-BR" enableClientBasedCulture="true" />
     <pages>
       <namespaces>
@@ -77,7 +85,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
