--- a/ProvaSiteware/ProvaSiteware.MVC/Web.config
+++ b/ProvaSiteware/ProvaSiteware.MVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ProvaSitewareDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=Localhost;Initial Catalog=ProvaSiteware;Integrated Security=SSPI;" />
+    <add name="LabDBConnection" providerName="System.Data.SqlClient" connectionString="Data Source=Localhost;Initial Catalog=Lab;Integrated Security=SSPI;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
