--- a/ProvaSiteware/ProvaSiteware.MVC/Lab.Presentation.MVC.csproj
+++ b/ProvaSiteware/ProvaSiteware.MVC/Lab.Presentation.MVC.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{E3E379DF-F4C6-4180-9B81-6769533ABE47};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProvaSiteware.MVC</RootNamespace>
-    <AssemblyName>ProvaSiteware.MVC</AssemblyName>
+    <RootNamespace>Lab.Presentation.MVC</RootNamespace>
+    <AssemblyName>Lab.Presentation.MVC</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>false</UseIISExpress>
@@ -628,25 +628,25 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProvaSiteware.Application\ProvaSiteware.Application.csproj">
+    <ProjectReference Include="..\ProvaSiteware.Application\Lab.Application.csproj">
       <Project>{3267c211-17ee-4db3-a882-ccff775ae878}</Project>
-      <Name>ProvaSiteware.Application</Name>
+      <Name>Lab.Application</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Domain\ProvaSiteware.Domain.csproj">
+    <ProjectReference Include="..\ProvaSiteware.Domain\Lab.Domain.csproj">
       <Project>{d9219f5c-06eb-41b8-964f-387353362d29}</Project>
-      <Name>ProvaSiteware.Domain</Name>
+      <Name>Lab.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Infra.Data.NHibernate\ProvaSiteware.Infra.Data.NHibernate.csproj">
+    <ProjectReference Include="..\ProvaSiteware.Infra.Data.NHibernate\Lab.Infra.Data.NH.csproj">
       <Project>{05bb7437-eddf-44ca-af38-be84f9808084}</Project>
-      <Name>ProvaSiteware.Infra.Data.NHibernate</Name>
+      <Name>Lab.Infra.Data.NH</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Infra.Data\ProvaSiteware.Infra.Data.csproj">
+    <ProjectReference Include="..\ProvaSiteware.Infra.Data\Lab.Infra.Data.EF.csproj">
       <Project>{96c740e2-f3e0-48ce-8dc0-51799b9db12e}</Project>
-      <Name>ProvaSiteware.Infra.Data</Name>
+      <Name>Lab.Infra.Data.EF</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Infra.IoC\ProvaSiteware.Infra.IoC.csproj">
+    <ProjectReference Include="..\ProvaSiteware.Infra.IoC\Lab.Infra.CrossCutting.IoC.csproj">
       <Project>{D6981B93-F7D1-498B-832A-7B8ADB0D7391}</Project>
-      <Name>ProvaSiteware.Infra.IoC</Name>
+      <Name>Lab.Infra.CrossCutting.IoC</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
