--- a/Lab/Lab.Infra.Data.EF/Lab.Infra.Data.EF.csproj
+++ b/Lab/Lab.Infra.Data.EF/Lab.Infra.Data.EF.csproj
@@ -69,7 +69,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProvaSiteware.Domain\Lab.Domain.csproj">
+    <ProjectReference Include="..\Lab.Domain\Lab.Domain.csproj">
       <Project>{d9219f5c-06eb-41b8-964f-387353362d29}</Project>
       <Name>Lab.Domain</Name>
     </ProjectReference>
