--- a/Lab/Lab.Presentation.MVC/Lab.Presentation.MVC.csproj
+++ b/Lab/Lab.Presentation.MVC/Lab.Presentation.MVC.csproj
@@ -628,23 +628,23 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ProvaSiteware.Application\Lab.Application.csproj">
+    <ProjectReference Include="..\Lab.Application\Lab.Application.csproj">
       <Project>{3267c211-17ee-4db3-a882-ccff775ae878}</Project>
       <Name>Lab.Application</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Domain\Lab.Domain.csproj">
+    <ProjectReference Include="..\Lab.Domain\Lab.Domain.csproj">
       <Project>{d9219f5c-06eb-41b8-964f-387353362d29}</Project>
       <Name>Lab.Domain</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Infra.Data.NHibernate\Lab.Infra.Data.NH.csproj">
+    <ProjectReference Include="..\Lab.Infra.Data.NH\Lab.Infra.Data.NH.csproj">
       <Project>{05bb7437-eddf-44ca-af38-be84f9808084}</Project>
       <Name>Lab.Infra.Data.NH</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Infra.Data\Lab.Infra.Data.EF.csproj">
+    <ProjectReference Include="..\Lab.Infra.Data.EF\Lab.Infra.Data.EF.csproj">
       <Project>{96c740e2-f3e0-48ce-8dc0-51799b9db12e}</Project>
       <Name>Lab.Infra.Data.EF</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ProvaSiteware.Infra.IoC\Lab.Infra.CrossCutting.IoC.csproj">
+    <ProjectReference Include="..\Lab.Infra.CrossCutting.IoC\Lab.Infra.CrossCutting.IoC.csproj">
       <Project>{D6981B93-F7D1-498B-832A-7B8ADB0D7391}</Project>
       <Name>Lab.Infra.CrossCutting.IoC</Name>
     </ProjectReference>
