Padronização das classes de gerenciamento do contexto

--- a/Lab/Lab.Infra.Data.EF/Lab.Infra.Data.EF.csproj
+++ b/Lab/Lab.Infra.Data.EF/Lab.Infra.Data.EF.csproj
@@ -54,7 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Context\ContextManager.cs" />
+    <Compile Include="Repositories\UnitOfWorkManager.cs" />
     <Compile Include="Context\LabContext.cs" />
     <Compile Include="EntityConfig\ProdutoConfiguration.cs" />
     <Compile Include="Migrations\Configuration.cs" />
