--- a/Lab/Lab.Infra.Data.NH/Lab.Infra.Data.NH.csproj
+++ b/Lab/Lab.Infra.Data.NH/Lab.Infra.Data.NH.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session\DefaultConventions.cs" />
     <Compile Include="Session\SessionFactory.cs" />
-    <Compile Include="Session\SessionManager.cs" />
+    <Compile Include="Repositories\UnitOfWorkManager.cs" />
     <Compile Include="Repositories\ProdutoRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\UnitOfWork.cs" />
