Ajustes na validação das entidades e refatoração dos repositórios

--- a/Lab/Lab.Application/Lab.Application.csproj
+++ b/Lab/Lab.Application/Lab.Application.csproj
@@ -52,7 +52,7 @@
     <Compile Include="AppServiceBase.cs" />
     <Compile Include="Aspect\UnitOfWorkAspect.cs" />
     <Compile Include="CarrinhoAppService.cs" />
-    <Compile Include="Interfaces\IAppEntityServiceBase.cs" />
+    <Compile Include="Interfaces\IAppServiceBase.cs" />
     <Compile Include="Interfaces\ICarrinhoAppService.cs" />
     <Compile Include="Interfaces\IProdutoAppService.cs" />
     <Compile Include="ProdutoAppService.cs" />
