--- a/Lab/Lab.Presentation.MVC/Lab.Presentation.MVC.csproj
+++ b/Lab/Lab.Presentation.MVC/Lab.Presentation.MVC.csproj
@@ -169,7 +169,6 @@
     <Compile Include="ViewModels\CultureOptionVM.cs" />
     <Compile Include="ViewModels\PromocaoViewModel.cs" />
     <Compile Include="ViewModels\ItemCarrinhoViewModel.cs" />
-    <Compile Include="ViewModels\ProdutoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Script\app.js" />
@@ -1028,6 +1027,10 @@
     <Content Include="Scripts\i18n\angular-locale_zh.js" />
     <Content Include="Scripts\i18n\angular-locale_zu-za.js" />
     <Content Include="Scripts\i18n\angular-locale_zu.js" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
     <None Include="Scripts\jquery-3.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.0.js" />
     <Content Include="Scripts\jquery-3.1.0.min.js" />
